# ccpn_nef

./: .gitignore  NEF_modules_summary.md  README  README.md  __init__.py  pyproject.toml
src/ccpn_nef/: CompareNef.py  ErrorLog.py  GenericStarParser.py  NefImporter.py  SafeOpen.py  Specification.py  StarIo.py  StarTokeniser.py  Validator.py  dump.py  dump_as_dict.py  dump_dict.py  nef.py  simple_dump.py  star_classes.py  test_dump.py  test_tabulate_formatting.py
testdata/: Commented_Example_Change.nef
testdata/testinfolder1/: Commented_Example_BatchTest.nef
testdata/testoutfolder/: Commented_Example_BatchTest(1).txt  Commented_Example_BatchTest(2).txt  Commented_Example_BatchTest.txt
testing/: Paths.py  Test_Compare_files.py  Test_Star_parsers.py  __init__.py
tests/: Paths.py  Test_Compare_files.py  Test_Star_parsers.py  __init__.py
tests/test_data/: XPLOR_test1.nef
